# pyci

./: .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
devtools/: README.md
docs/: Makefile  README.md  conf.py  index.rst  make.bat
pyci/: __init__.py  _version.py  pyci.py
pyci/tests/: test_pyci.py
src/: main.cpp
